src/styles/pages/_menu.scss
#menu {
  padding: 2rem 2rem 2rem 2rem;

  & .banner-wrapper {
    display: block;
    margin: auto;
    width: 100%;
    height: 120px;
    border-radius: 0.5rem;
    overflow: hidden;
    position: relative;
  }

  & .menu-banner {
    width: 100%;
    max-height: 100%;
    object-fit: cover;
    filter: blur(2px);
  }

  & .overlay {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;
    background: rgba(0, 0, 0, 0.4);

    & h1 {
      color: $white-foreground;
      text-shadow: $text-shadow-img, 0 0 10px #000;
      font-size: 2rem;
      font-weight: 400;
    }

    & p {
      color: $white-foreground;
      text-shadow: $text-shadow-img, 0 0 10px #000;
      font-size: 1rem;
      font-weight: 300;
    }
  }
}

